[project]
name = "streamdemand"
version = "0.1.0"
description = ""
authors = [{ name = "Justinas Stankevicius", email = "justinas@justinas.org" }]
requires-python = "~=3.12"
license = "MIT"
dependencies = [
    "Flask~=2.0",
    "streamlink~=8.0",
    "gunicorn>=20.1.0,<21",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
